Prevent line break in buttons

--- a/client-participation/css/conversationView.scss
+++ b/client-participation/css/conversationView.scss
@@ -383,13 +383,14 @@ img {
   }
 
   #showResultsButton, #switchBetweenCommentsAndVotingButton {
-    width: fit-content;
+    width: 100%;
 
     & span {
       width: 100%;
       justify-content: center;
       padding: 0 0.75rem 0;
       font-size: 0.8rem;
+      white-space: nowrap;
     }
   }
 }
